# Klikier

./: .gitignore  .main.py.3909194079~  .replit  README.md  admin.py  bot.py  data.json  index.html  main.py  manifest.webmanifest  package-lock.json  package.json  pyproject.toml  registerSW.js  requirements.txt  sw.js  vite.config.js  webpack.config.js
assets/: index-2fNfkE6I.js  index-5D3m2B04.js  index-5tZaT3sv.css  index-6CU5Fdla.js  index-BN1SxQWf.js  index-BUWNCs_2.js  index-BUeE2eaW.js  index-BV-RASJw.js  index-Bjrk5p-Q.js  index-BmjsNAup.css  index-Bn2rWJy8.js  index-BoS4UUbe.js  index-BqCucFuK.js  index-BqbF5Cqc.js  index-BtDpTB_J.js  index-BuUDgnTb.js  index-C-QriL7m.js  index-C-hGuUAp.js  index-C3mPYzbb.js  index-C8cU70Vp.js  index-CHkegNtw.js  index-CKtsDLQ9.js  index-CNZhlS7j.js  index-CS53lh1H.js  index-CSJyMXXg.css  index-C_0f9O0P.js  index-CbZH4Gtd.js  index-CbpsA342.js  index-ChbJ-3Nd.js  index-ChrN60oS.js  index-Ck5fsk2d.js  index-CuPh5tEx.css  index-Cv1X31Lo.css  index-CxurzhhI.css  index-CzK14aRz.css  index-D11pHttg.js  index-D4Mdl10T.js  index-DP7K9RYE.js  index-DPdqNT3r.css  index-DR-KDhCK.js  (+17 more)
public/: app.html
src/: App.css  App.jsx
